Final bug squashes

--- a/content/themes/portfolio-blog-theme/assets/app/scss/interface/_nav.scss
+++ b/content/themes/portfolio-blog-theme/assets/app/scss/interface/_nav.scss
@@ -59,9 +59,9 @@
 
 .nav_list {
     position: absolute;
-    top: 35%;
+    top: 18%;
     left: 50%;
-    transform: translate(-50%, -35%);
+    transform: translate(-50%, -18%);
     text-align: center;
 
     @include respond-min($bp2) { 
